--- a/Congress/index.html
+++ b/Congress/index.html
@@ -106,16 +106,24 @@
 	<div class="container-2">
 		<div class="accordion-container">
 
-                <div class="accordion popup-btn ">12-14 жовтня 2021 року під егідою Міністерства охорони здоров’я України, Національної академії медичних наук України, Асоціації педіатрів України, ДУ «Інститут педіатрії, акушерства та гінекології НАМН України», Національного медичного університету імені О.О. Богомольця, Національного університету охорони здоров’я України імені П.Л.Шупика, відбудеться довгоочікувана подія – ХV Конгрес педіатрів України «Актуальні проблеми педіатрії».
+                <div class="accordion popup-btn ">
+                	<p class="popup-btn_blue">12-14 жовтня 2021 року під егідою Міністерства охорони здоров’я України, Національної академії медичних наук України, Асоціації педіатрів України, ДУ «Інститут педіатрії, акушерства та гінекології НАМН України», Національного медичного університету імені О.О. Богомольця, Національного університету охорони здоров’я України імені П.Л.Шупика, відбудеться довгоочікувана подія – ХV Конгрес педіатрів України «Актуальні проблеми педіатрії».</p>
         			<p class="more">Дізнатись більше</p>
                 </div>
                 <div class="panel">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>
+                    	Ця найбільша наукова подія педіатричного життя як завжди збирає провідних вчених, організаторів охорони здоров'я та практикуючих лікарів, котрі надають медичну допомогу дітям. 
+
+ До широкомасштабної роботи ХV-го Конгресу запрошуються взяти участь всіх фахівців –педіатрів та представників різних спеціальностей: 
+
+ дитячих інфекціоністів, пульмонологів, імунологів, алергологів, кардіоревматологів, реаніматологів, неонатологів, отоларингологів, функціоналістів, радіологів, гастроентерологів, нефрологів, гематологів, дерматологів, психоневрологів, ортопедів-вертебрологів, ендокринологів, фтизіатрів, хірургів, стоматологів, сімейних лікарів, фармацевтів, медсестер, психологів та педагогів , а також юристів з питань страхової медицини, соціальних працівників та керівників Державних органів Охорони здоров’я й приватних клінік, страхових компаній з різних регіонів України.  
+
+На пленарних засіданнях та наукових симпозіумах в змішаному офф-лайн/он-лайн режимі будуть заслухані доповіді, як найбільш вагомих, так і досвідчених молодих вчених-педіатрів з України та провідних міжнародних спікерів з Германії, країн Балтії, Грузії та ін. 
+
+ Крім того, ми станемо учасниками дискусійних клубів, майстер-класів, які будуть присвячені гостро актуальним питанням ведення хворих з Ковідом та постковідним синдромом, вакцинації та тестуванню інфекцій, алгоритмам надання невідкладної допомоги, клінічному розбору складних випадків, методам профілактики та самозахисту лікарів та ін. важливим проблемам сьогодення.  
+
+ Конгрес проводиться згідно Реєстру з’їздів, конгресів, симпозіумів та науково-практичних конференцій, що заплановані у 2021 році (№134). Участь у них передбачає отримання 10 балів для учасників та 30 балів для спікерів, які матимуть змогу отримати сертифікат для атестації на присвоєння (підтвердження) лікарської кваліфікаційної категорії та зарахувати встановлену кількість балів відповідно до «Шкали значень різних видів діяльності лікарів (провізорів) у період між передатестаційними циклами».  
+                    </p>
                 </div>
             </div>
 	</div>
