--- a/Congress/index-4.html
+++ b/Congress/index-4.html
@@ -125,27 +125,27 @@
 			<form action="./send.php" method="POST">
                  <div class="">
                      <div class="inp">
-                         <p>Прізвище, ім'я, по батькові *</p>
+                         <p>Прізвище, ім'я, по батькові</p>
                          <input id="initials" name="initials" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Місце роботи *</p>
+                         <p>Місце роботи</p>
                          <input id="work-place" name="work-place" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Посада *</p>
+                         <p>Посада</p>
                          <input id="position" name="position" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Вчений ступінь *</p>
+                         <p>Вчений ступінь</p>
                          <input id="degree" name="degree" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Вчене звання *</p>
+                         <p>Вчене звання</p>
                          <input id="rank" name="rank" type="text" required></input>
                      </div>
                      <div class="inp">
-                         <p>Електронна адреса *</p>
+                         <p>Електронна адреса</p>
                          <input id="email" name="email" type="email" required></input>
                      </div>
                      <div class="inp">
