--- a/Congress/index.html
+++ b/Congress/index.html
@@ -185,15 +185,15 @@
 	            <h2>Наукова програма</h2>
 	            <p>Конгрес передбачає обговорення наступних питань:</p>
 	            <div class="slider-container_blue">
-	            	<div class="slider-img-1"></div>
+	            	<div class="slider-img-1 slider-img-2"></div>
 		        	<div class="slider-text_conf">
 		        		<div class="slider-text_blue"></div>
-		        		<p>Актуальні питання організації допомоги дітям в умовах медичної Реформи  в Україні.</p>
-						<p>Дотримання прав дитини, батьків та лікарів,  проблеми соціальної педіатрії  на сучасному етапі.</p>
-						<p>Епідеміологія довголіття в Україні: Від народження до зрілості.</p>
-						<p>Сучасніі підходи до діагностики та лікування респіраторних інфекцій в епоху пандемії  SARS-COV-2.</p>
-						<p>Система реабілітації та профілактики постковідного синдрому у дітей.</p>
-						<p>Удосконалення навичків базових та спеціалізованих реанімаційних заходів та постреанімаційне лікування  в дитячому віці.</p>
+		        		<p>Проблеми сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
+						<p>Питання розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика</p>
+						<p>Аспекти раціонального вигодовування, дієтетики та нутріціології для дітей</p>
+						<p>Удосконалення надання медичної допомоги новонародженим.</p>
+						<p>Актуальні проблеми адаптації дитини в суспільстві, ризики зриву та їх попередження з точки зору допомоги педіатра, психолога та педагога.</p>
+		        		<p>Новітні технології діагностики, лікування та профілактики орфанних та соціально-значимих захворювань дитячого віку.</p>
 		        	</div>
 	        	</div>
         	</div>
@@ -203,15 +203,16 @@
 	            <h2>Наукова програма</h2>
 	            <p>Конгрес передбачає обговорення наступних питань:</p>
 	            <div class="slider-container_blue">
-	            	<div class="slider-img-1"></div>
+	            	<div class="slider-img-1 slider-img-3"></div>
 		        	<div class="slider-text_conf">
 		        		<div class="slider-text_blue"></div>
-		        		<p>Актуальні питання організації допомоги дітям в умовах медичної Реформи  в Україні.</p>
-						<p>Дотримання прав дитини, батьків та лікарів,  проблеми соціальної педіатрії  на сучасному етапі.</p>
-						<p>Епідеміологія довголіття в Україні: Від народження до зрілості.</p>
-						<p>Сучасніі підходи до діагностики та лікування респіраторних інфекцій в епоху пандемії  SARS-COV-2.</p>
-						<p>Система реабілітації та профілактики постковідного синдрому у дітей.</p>
-						<p>Удосконалення навичків базових та спеціалізованих реанімаційних заходів та постреанімаційне лікування  в дитячому віці.</p>
+						<p>Раціональна фармакотерапія в клінічній педіатрії та неонатології.</p>
+						<p>Дитяча інвалідність: Медичні, педагогічні та соціальні аспекти.</p>
+						<p>Екологічні проблеми та дитяча екопатологія в сучасних умовах.</p>
+						<p>Актуальні питання підготовки лікарів у галузі педіатрії на сучасному етапі розвитку суспільства.</p>
+						<p>Оновлення базових знань з питань вікової нормальної гістології, фізіології та анатомії дитини.</p>
+						<p>Історичні аспекти розвитку педіатрії.</p>
+						<p>Програма безпеки та самозахисту лікарів на сучасному етапі.</p>
 		        	</div>
 	        	</div>
         	</div>
@@ -261,7 +262,7 @@
 			<h2>СПІВГОЛОВИ:</h2>
 			<div class="people_block-1 people_block-12">
 				<div class="people_plate">
-					<div class="people_plate_img"></div>
+					<div class="people_plate_img people_plate_img_ant"></div>
 					<b>Антипкін Ю.Г.</b>
 					<p>Директор ДУ «Інститут педіатрії, акушерства та гінекології імені академіка О.М. Лук’янової НАМН України», Президент Асоціації педіатрів України</p>
 				</div>
@@ -289,7 +290,7 @@
 					<p>Директор Департаменту охорони здоров’я Київської обласної державної адміністрації</p>
 				</div>
 				<div class="people_plate">
-					<div class="people_plate_img"></div>
+					<div class="people_plate_img people_plate_img_kuch"></div>
 					<b>Кучин Ю.Л.</b>
 					<p>Ректор Національного медичного університету імені О.О. Богомольця</p>
 				</div>
@@ -304,12 +305,12 @@
 					<p>Заступник директора ДУ «Інституту педіатрії, акушерства та гінекології імені О.М. Лук’янової НАМН України»</p>
 				</div>
 				<div class="people_plate">
-					<div class="people_plate_img"></div>
+					<div class="people_plate_img people_plate_img_volo"></div>
 					<b>Волосовець О.П.</b>
 					<p>Завідувач кафедри педіатрії №2 Національного медичного університету імені О.О. Богомольця</p>
 				</div>
 				<div class="people_plate">
-					<div class="people_plate_img"></div>
+					<div class="people_plate_img people_plate_img_mit"></div>
 					<b>Мітюряєва-Корнійко І.О.</b>
 					<p>завідувачка кафедри педіатрії №4 Національного медичного університету імені О.О. Богомольця</p>
 				</div>
@@ -368,27 +369,27 @@
 			<form action="./send.php" method="POST">
                  <div class="">
                      <div class="inp">
-                         <p>Прізвище, ім'я, по батькові *</p>
+                         <p>Прізвище, ім'я, по батькові</p>
                          <input id="initials" name="initials" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Місце роботи *</p>
+                         <p>Місце роботи</p>
                          <input id="work-place" name="work-place" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Посада *</p>
+                         <p>Посада</p>
                          <input id="position" name="position" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Вчений ступінь *</p>
+                         <p>Вчений ступінь</p>
                          <input id="degree" name="degree" type="text" required>
                      </div>
                      <div class="inp">
-                         <p>Вчене звання *</p>
+                         <p>Вчене звання</p>
                          <input id="rank" name="rank" type="text" required></input>
                      </div>
                      <div class="inp">
-                         <p>Електронна адреса *</p>
+                         <p>Електронна адреса</p>
                          <input id="email" name="email" type="email" required></input>
                      </div>
                      <div class="inp">
