front v0.3.3 logs selection and marking added

--- a/Congress/index-2.html
+++ b/Congress/index-2.html
@@ -80,7 +80,7 @@
 	</div>
 
 
-	<div class="people">
+	<div class="people people-time">
 	<div class="people-inner people-inner_extra">
 			<h2>Розклад засідань</h2>
 			<div class="people_block-1 people_block-1-dates">
