front v0.3.3 logs selection and marking added

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -104,11 +104,26 @@
 	</div>
 
 	<div class="container-2">
+
+
+		<!-- <div class="">
+          <h4>Почався сезон застуд і навколо всі хворіють?</h4>
+          <p>
+            В сезон застуд багато людей в громадському транспорті, в магазинах та на роботі починають чхати і кашляти. Не захворіти на ГРВІ самому і вберегти від застуди дитину допоможе натуральний препарат АЛЬПІКОЛ.
+          </p>
+          <div>
+	          <div class="panel">
+	            <p>Завдяки природним компонентам, АЛЬПІКОЛ має антимікробний<sup>6</sup> та противірусний<sup>2</sup> ефект, сприяє зміцненню імунітету і тому допомагає залишатися здоровим, навіть коли навколо всі хворіють.</p>
+	          </div>
+	          <div class="accordion">Детальніше</div>
+          </div>
+        </div> -->
+
+
 		<div class="accordion-container">
 
-                <div class="accordion popup-btn ">
+                <div class="">
                 	<p class="popup-btn_blue">12-14 жовтня 2021 року під егідою Міністерства охорони здоров’я України, Національної академії медичних наук України, Асоціації педіатрів України, ДУ «Інститут педіатрії, акушерства та гінекології НАМН України», Національного медичного університету імені О.О. Богомольця, Національного університету охорони здоров’я України імені П.Л.Шупика, відбудеться довгоочікувана подія – ХV Конгрес педіатрів України «Актуальні проблеми педіатрії».</p>
-        			<p class="more">Дізнатись більше</p>
                 </div>
                 <div class="panel">
                     <p>
@@ -125,6 +140,7 @@
  Конгрес проводиться згідно Реєстру з’їздів, конгресів, симпозіумів та науково-практичних конференцій, що заплановані у 2021 році (№134). Участь у них передбачає отримання 10 балів для учасників та 30 балів для спікерів, які матимуть змогу отримати сертифікат для атестації на присвоєння (підтвердження) лікарської кваліфікаційної категорії та зарахувати встановлену кількість балів відповідно до «Шкали значень різних видів діяльності лікарів (провізорів) у період між передатестаційними циклами».  
                     </p>
                 </div>
+                <div class="accordion more">Дізнатись більше</div>
             </div>
 	</div>
 
