front v0.3.3 logs selection and marking added

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -337,7 +337,12 @@
 <div class="container-2">
 		<div class="accordion-container">
 				<h2>ЧЛЕНИ ОРГКОМІТЕТУ:</h2>
-                <div class="accordion popup-btn ">
+
+				<div>
+        			<p class="more-2">Повний список</p>
+					
+				</div>
+<!--                 <div class="accordion popup-btn ">
                 	<div class="acc-flex">
                 		<p>
                 		<b>Абатуров О.Є.</b> – завідувач кафедри факультетської педіатрії та медичної генетики Дніпропетровської державної медичної академії;<br>
@@ -354,8 +359,8 @@
                 	</div>
                 	
         			<p class="more">Повний список</p>
-                </div>
-                <div class="panel">
+                </div> -->
+<!--                 <div class="panel">
                     <div class="acc-flex">
                 		<p>
                 		<b>Абатуров О.Є.</b> – завідувач кафедри факультетської педіатрії та медичної генетики Дніпропетровської державної медичної академії;<br>
@@ -370,7 +375,7 @@
 <b>Беш Л.В.</b> – завідувачка кафедри педіатрії №2 Львівського національного медичного університету імені Данила Галицького;
                 	</p>
                 	</div>
-                </div>
+                </div> -->
             </div>
 	</div>
 
