front v0.3.3 logs selection and marking added

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -127,17 +127,17 @@
                 </div>
                 <div class="panel">
                     <p>
-                    	Ця найбільша наукова подія педіатричного життя як завжди збирає провідних вчених, організаторів охорони здоров'я та практикуючих лікарів, котрі надають медичну допомогу дітям. 
+                    	Ця найбільша наукова подія педіатричного життя як завжди збирає провідних вчених, організаторів охорони здоров'я та практикуючих лікарів, котрі надають медичну допомогу дітям.</p>
 
- До широкомасштабної роботи ХV-го Конгресу запрошуються взяти участь всіх фахівців –педіатрів та представників різних спеціальностей: 
+ <p>До широкомасштабної роботи ХV-го Конгресу запрошуються взяти участь всіх фахівців –педіатрів та представників різних спеціальностей: </p>
 
- дитячих інфекціоністів, пульмонологів, імунологів, алергологів, кардіоревматологів, реаніматологів, неонатологів, отоларингологів, функціоналістів, радіологів, гастроентерологів, нефрологів, гематологів, дерматологів, психоневрологів, ортопедів-вертебрологів, ендокринологів, фтизіатрів, хірургів, стоматологів, сімейних лікарів, фармацевтів, медсестер, психологів та педагогів , а також юристів з питань страхової медицини, соціальних працівників та керівників Державних органів Охорони здоров’я й приватних клінік, страхових компаній з різних регіонів України.  
+ <p>дитячих інфекціоністів, пульмонологів, імунологів, алергологів, кардіоревматологів, реаніматологів, неонатологів, отоларингологів, функціоналістів, радіологів, гастроентерологів, нефрологів, гематологів, дерматологів, психоневрологів, ортопедів-вертебрологів, ендокринологів, фтизіатрів, хірургів, стоматологів, сімейних лікарів, фармацевтів, медсестер, психологів та педагогів , а також юристів з питань страхової медицини, соціальних працівників та керівників Державних органів Охорони здоров’я й приватних клінік, страхових компаній з різних регіонів України.</p>
 
-На пленарних засіданнях та наукових симпозіумах в змішаному офф-лайн/он-лайн режимі будуть заслухані доповіді, як найбільш вагомих, так і досвідчених молодих вчених-педіатрів з України та провідних міжнародних спікерів з Германії, країн Балтії, Грузії та ін. 
+<p>На пленарних засіданнях та наукових симпозіумах в змішаному офф-лайн/он-лайн режимі будуть заслухані доповіді, як найбільш вагомих, так і досвідчених молодих вчених-педіатрів з України та провідних міжнародних спікерів з Германії, країн Балтії, Грузії та ін. </p>
 
- Крім того, ми станемо учасниками дискусійних клубів, майстер-класів, які будуть присвячені гостро актуальним питанням ведення хворих з Ковідом та постковідним синдромом, вакцинації та тестуванню інфекцій, алгоритмам надання невідкладної допомоги, клінічному розбору складних випадків, методам профілактики та самозахисту лікарів та ін. важливим проблемам сьогодення.  
+ <p>Крім того, ми станемо учасниками дискусійних клубів, майстер-класів, які будуть присвячені гостро актуальним питанням ведення хворих з Ковідом та постковідним синдромом, вакцинації та тестуванню інфекцій, алгоритмам надання невідкладної допомоги, клінічному розбору складних випадків, методам профілактики та самозахисту лікарів та ін. важливим проблемам сьогодення.  </p>
 
- Конгрес проводиться згідно Реєстру з’їздів, конгресів, симпозіумів та науково-практичних конференцій, що заплановані у 2021 році (№134). Участь у них передбачає отримання 10 балів для учасників та 30 балів для спікерів, які матимуть змогу отримати сертифікат для атестації на присвоєння (підтвердження) лікарської кваліфікаційної категорії та зарахувати встановлену кількість балів відповідно до «Шкали значень різних видів діяльності лікарів (провізорів) у період між передатестаційними циклами».  
+ <p>Конгрес проводиться згідно Реєстру з’їздів, конгресів, симпозіумів та науково-практичних конференцій, що заплановані у 2021 році (№134). Участь у них передбачає отримання 10 балів для учасників та 30 балів для спікерів, які матимуть змогу отримати сертифікат для атестації на присвоєння (підтвердження) лікарської кваліфікаційної категорії та зарахувати встановлену кількість балів відповідно до «Шкали значень різних видів діяльності лікарів (провізорів) у період між передатестаційними циклами».  
                     </p>
                 </div>
                 <div class="accordion more">Дізнатись більше</div>
