front v0.3.3 logs selection and marking added

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -243,17 +243,20 @@
 <div class="partners partners-links">
 	<div class="partners-container partners-container-links">
 		<a class=" partners-plate-link1" href="./index-2.html">
-			<div class="partners-plate_blue-text">
+			<div class="partners-plate_blue-text_outer">
+				<div class="partners-plate_blue-text"></div>
 				<p>Розклад</p>
 			</div>
 		</a>
 		<a class=" partners-plate-link2" href="./index-3.html">
-			<div class="partners-plate_blue-text">
+			<div class="partners-plate_blue-text_outer">
+				<div class="partners-plate_blue-text"></div>
 				<p>Тези</p>
 			</div>
 		</a>
 		<a class=" partners-plate-link3" href="./index-4.html">
-			<div class="partners-plate_blue-text">
+			<div class="partners-plate_blue-text_outer">
+				<div class="partners-plate_blue-text"></div>
 				<p>Фото і відео</p>
 			</div>
 		</a>
