front v0.3.3 logs selection and marking added

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -339,7 +339,7 @@
 
 <div class="container-2">
 		<div class="accordion-container">
-				<h2>ЧЛЕНИ ОРГКОМІТЕТУ:</h2>
+				<h2>ЧЛЕНИ ОРГКОМІТЕТУ</h2>
 <!--                 <div class="accordion popup-btn ">
                 	<div class="acc-flex">
                 		<p>
