front v0.3.3 logs selection and marking added

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -174,6 +174,26 @@
 		
 	</div>
 
+
+	<div class="mob-container-slider">
+		<div class="mob-container_inner-slider">
+	            <h2>Наукова програма</h2>
+	            <p>Конгрес передбачає обговорення наступних питань:</p>
+	            <div class="mob-container_blue">
+	            	<div class="mob-img-1"></div>
+		        	<div class="mob-text_conf">
+		        		<div class="mob-text_blue"></div>
+		        		<p>Актуальні питання організації допомоги дітям в умовах медичної Реформи  в Україні.</p>
+						<p>Дотримання прав дитини, батьків та лікарів,  проблеми соціальної педіатрії  на сучасному етапі.</p>
+						<p>Епідеміологія довголіття в Україні: Від народження до зрілості.</p>
+						<p>Сучасніі підходи до діагностики та лікування респіраторних інфекцій в епоху пандемії  SARS-COV-2.</p>
+						<p>Система реабілітації та профілактики постковідного синдрому у дітей.</p>
+						<p>Удосконалення навичків базових та спеціалізованих реанімаційних заходів та постреанімаційне лікування  в дитячому віці.</p>
+		        	</div>
+        	</div>
+		</div>
+	</div>
+
 <!--////////// slider-->
 
 <div class="slider">
@@ -339,7 +359,7 @@
 
 <div class="container-2">
 		<div class="accordion-container">
-				<h2>ЧЛЕНИ ОРГКОМІТЕТУ</h2>
+				<a target=”_blank” href="./members.pdf">ЧЛЕНИ ОРГКОМІТЕТУ</a>
 <!--                 <div class="accordion popup-btn ">
                 	<div class="acc-flex">
                 		<p>
