--- a/Congress/index.html
+++ b/Congress/index.html
@@ -192,6 +192,39 @@
 		        	</div>
         	</div>
 		</div>
+		<div class="mob-container_inner-slider">
+	            <h2>Наукова програма</h2>
+	            <p>Конгрес передбачає обговорення наступних питань:</p>
+	            <div class="mob-container_blue">
+	            	<div class="mob-img-1 mob-img-2"></div>
+		        	<div class="mob-text_conf">
+		        		<div class="mob-text_blue"></div>
+		        		<p>Проблеми сучасної респіраторної, алергічної, гастороентерологічної, кардіологічної, нефрологічної та інфекційної патології дитячого віку.</p>
+						<p>Питання розвитку, виховання та догляду за здоровою та хворою дитиною; вакцинопрофілактика</p>
+						<p>Аспекти раціонального вигодовування, дієтетики та нутріціології для дітей</p>
+						<p>Удосконалення надання медичної допомоги новонародженим.</p>
+						<p>Актуальні проблеми адаптації дитини в суспільстві, ризики зриву та їх попередження з точки зору допомоги педіатра, психолога та педагога.</p>
+		        		<p>Новітні технології діагностики, лікування та профілактики орфанних та соціально-значимих захворювань дитячого віку.</p>
+		        	</div>
+        	</div>
+		</div>
+		<div class="mob-container_inner-slider">
+	            <h2>Наукова програма</h2>
+	            <p>Конгрес передбачає обговорення наступних питань:</p>
+	            <div class="mob-container_blue">
+	            	<div class="mob-img-1 mob-img-3"></div>
+		        	<div class="mob-text_conf">
+		        		<div class="mob-text_blue"></div>
+		        		<p>Раціональна фармакотерапія в клінічній педіатрії та неонатології.</p>
+						<p>Дитяча інвалідність: Медичні, педагогічні та соціальні аспекти.</p>
+						<p>Екологічні проблеми та дитяча екопатологія в сучасних умовах.</p>
+						<p>Актуальні питання підготовки лікарів у галузі педіатрії на сучасному етапі розвитку суспільства.</p>
+						<p>Оновлення базових знань з питань вікової нормальної гістології, фізіології та анатомії дитини.</p>
+						<p>Історичні аспекти розвитку педіатрії.</p>
+						<p>Програма безпеки та самозахисту лікарів на сучасному етапі.</p>
+		        	</div>
+        	</div>
+		</div>
 	</div>
 
 <!--////////// slider-->
