--- a/Congress/index.html
+++ b/Congress/index.html
@@ -288,6 +288,7 @@
         </div>
     </div>
     <a class="slider__control slider__control_left" href="#" role="button"></a>
+    <span id="counter"></span>
     <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 </div>
 
