--- a/Congress/index.html
+++ b/Congress/index.html
@@ -231,7 +231,7 @@
 
 <div class="slider">
     <div class="slider__wrapper">
-        <div class="slider__item">
+        <div class="slider__item ">
         	<div class="slider-outer-container">
 	            <h2>Наукова програма</h2>
 	            <p>Конгрес передбачає обговорення наступних питань:</p>
@@ -247,6 +247,7 @@
 						<p>Удосконалення навичків базових та спеціалізованих реанімаційних заходів та постреанімаційне лікування  в дитячому віці.</p>
 		        	</div>
 	        	</div>
+	        	<div class="slider-pag">1/3</div>
         	</div>
         </div>
         <div class="slider__item">
@@ -265,6 +266,7 @@
 		        		<p>Новітні технології діагностики, лікування та профілактики орфанних та соціально-значимих захворювань дитячого віку.</p>
 		        	</div>
 	        	</div>
+	        	<div class="slider-pag">2/3</div>
         	</div>
         </div>
         <div class="slider__item">
@@ -284,11 +286,11 @@
 						<p>Програма безпеки та самозахисту лікарів на сучасному етапі.</p>
 		        	</div>
 	        	</div>
+	        	<div class="slider-pag">3/3</div>
         	</div>
         </div>
     </div>
     <a class="slider__control slider__control_left" href="#" role="button"></a>
-    <span id="counter"></span>
     <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 </div>
 
