--- a/Congress/index.html
+++ b/Congress/index.html
@@ -290,8 +290,10 @@
         	</div>
         </div>
     </div>
-    <a class="slider__control slider__control_left" href="#" role="button"></a>
-    <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+    <div class="slider-btns_cont">
+    	<a class="slider__control slider__control_left" href="#" role="button"></a>
+    	<a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+    </div>
 </div>
 
 <!--//////////slider-->
